<resources>
    <string name="app_id">com.example.motorc</string>
    <string name="app_name">Motorcesionario</string>
    <string name="app_titulo">Motorcesionario</string>
    <string name="por_registro">Regístrate</string>
    <string name="titulo">Motorcesionario</string>
    <string name="por_ingreso"><u>¿Ya tienes una cuenta?</u></string>
    <string name="reg_titulo">Nuevo usuario</string>
    <string name="reg_nombre">Nombre de usuario</string>
    <string name="reg_email">Tu email</string>
    <string name="reg_pass1">Escribe una contraseña</string>
    <string name="reg_pass2">Vuelve a escribir la contraseña</string>
    <string name="reg_aviso">*Puedes cambiar tus datos en Ajustes</string>
    <string name="reg_bienvenida"><b>¡Bienvenido a Motorcesionario!</b>\nEmpecemos por tu nombre…</string>
    <string name="reg_aceptar_terminos">Acepto <u>los términos de Motorcesionario</u>*</string>
    <string name="reg_boton_registro">Registrarse</string>
    <string name="reg_direccion">Escribe tu dirección de domicilio…</string>
    <string name="reg_sin_nom">Nombre menor de 5 letras</string>
    <string name="reg_sin_nom2">Escribe tu nombre*</string>
    <string name="reg_sin_email">Escribe un email válido</string>
    <string name="reg_sin_pass1">Contraseña demasiado corta</string>
    <string name="reg_desiguales">Las contraseñas no coinciden</string>
    <string name="reg_sin_foto">Por favor, añade una foto</string>
    <string name="reg_cb_terminos">No puedes seguir sin aprobar los términos</string>
    <string name="ter_titulo_principal">Términos de Motorcesionario</string>
    <string name="ter_uso_titulo">1. Términos de uso</string>
    <string name="ter_uso_contenido">¡Bienvenido a la app de Motorcesionario! La intención de la aplicación es meramente formativa para el Creador. No obstante, cualquier usuario autorizado por él puede utilizarla sin restricciones de uso.\n\nLa aplicación puede sufrir cambios y necesite una copia más moderna para poder utilizar los servicios de Motorcesionario correctamente. El uso de una versión desactualizada puede conllevar resultados inesperados y anomalías en su experiencia de usuario como posibles daños a los servicios de Motorcesionario. Si la aplicación que utiliza es la última versión, el Creador le garantiza el acceso a los servicios online, donde podrá conversar con otros usuarios y comprar productos de la tienda de Motorcesionario (Véase los Términos de Privacidad para ver que información recaba Motorcesionario). \n\nLa redistribución de este software sólo está permitido con el permiso expreso del Creador. Aquellos usuarios permitidos recibirán soporte y contacto directo con el Creador por otros medios ajenos a la aplicación. Si usted está ejecutando una copia redistribuida sin el consentimiento del Creador, quedará fuera de cualquier capacidad de ofrecer ideas y mejoras a Motorcesionario.\n\nEl código es únicamente propiedad del Creador, que claramente no es usted. Sin embargo, si lo conoce puede preguntarle cualquier duda e incluso enseñarle como funcionan los servicios de Motorcesionario.\n\nSi después acepta estos términos usted declara a Motorcesionario lo siguiente:\n<ol><li>Que conoce personalmente al Creador y él también le conoce.\n</li><li>Que está utilizando en estos momentos la versión más actualizada de la app de Motorcesionario.\n</li><li>Que ante cualquier duda sobre el código fuente de la aplicación, puede pedir asistencia al Creador.</li></ol>\n\nLa violación de cualquiera de estos términos le otorga el derecho al Creador o a un administrador de expulsarlo de los servicios de Motorcesionario.</string>
    <string name="ter_privacidad_contenido">Motorcesionario es un servicio online al que se puede acceder a través una aplicación cliente. La aplicación oficial para Android desarrollada por el Creador no tiene ninguna capacidad para recopilar información directa sobre usted.\n\nCuando usted utiliza la aplicación, se conecta a la base de datos de Motorcesionario. La interacción con la base de datos requiere almacenar información que usted vaya generando como por ejemplo:\n<ol><li>Información sobre su perfil de usuario (nombre, email, contraseña, fecha de creación, foto y dirección del domicilio).\n</li><li>Eventos a los que te has unido.\n</li><li>Mensajes en canales públicos (emisor, fecha de envío y contenido).\n</li><li>Productos comprados.\n\n</li></ol>Esta información recopilada es esencial para el correcto funcionamiento de los servicios de Motorcesionario. Toda la información se tratará como material para proyecto, por lo que puede ser revisado por el profesor del Creador.\n\nSi aceptó estas condiciones y creó una cuenta de Motorcesionario, aunque sea expulsado del servicio, cualquier información se mantendrá en la base de datos ya que así lo decidió el profesor del Creador (que le den a la GDPR).\n\nSi usted no está de acuerdo con estas condiciones, no podrá utilizar los servicios de Motorcesionario. En ese caso le recomendamos que elimine la aplicación para que no ocupe espacio innecesario en su memoria.</string>
    <string name="ter_privacidad_titulo">2. Términos de privacidad</string>
    <string name="ter_aclaracion">Este documento se referirá al fundador de este proyecto con el término \"Creador\"</string>
    <string name="ter_volver">Volver</string>
    <string name="ing_email">Correo electrónico</string>
    <string name="ing_pass">Contraseña</string>
    <string name="ing_boton">Entrar</string>
    <string name="ing_nueva_cuenta"><u>¿No tienes una cuenta?</u></string>
    <string name="ini_publico">Boxes</string>
    <string name="ini_productos">Catálogo</string>
    <string name="ini_pedidos">Pedidos</string>
    <string name="ini_eventos">Eventos</string>
    <string name="ini_chats">Tus chats</string>
    <string name="ini_usuarios">Usuarios</string>
    <string name="ini_salir">Cerrar sesión</string>
    <string name="cht_entrada">Escribe un mensaje…</string>
    <string name="ver_aplicar">Aplicar cambios</string>
    <string name="ver_ascender">Ascender</string>
    <string name="eve_titulo">Eventos publicados</string>
    <string name="eve_Motorcesionario">Motorcesionario</string>
    <string name="eve_gaming">Gaming</string>
    <string name="eve_mundo">Mundo</string>
    <string name="eve_otro">Otro</string>
    <string name="pro_titulo">Catálogo de productos</string>
    <string name="pro_vehiculos">Vehículos</string>
    <string name="pro_repuestos">Repuestos</string>
    <string name="pro_otro">Otro</string>
    <string name="boxes_titulo">Boxes</string>
    <string name="boxes_desc">¡Chatea con otros miembros!</string>
    <string name="etm_tit_creacion">Crear nuevo tema</string>
    <string name="etm_titulo">Sobre este tema</string>
    <string name="etm_nombre">Escribe un título…</string>
    <string name="etm_desc">¿De qué va el tema?</string>
    <string name="etm_autor">Email del creador</string>
    <string name="aju_titulo">Tus ajustes</string>
    <string name="aju_perfil">Editar perfil</string>
    <string name="aju_noche">Modo noche</string>
    <string name="sinfoto">No has hecho ninguna foto</string>
    <string name="sinimg">No has seleccionado ninguna foto</string>
    <string name="pro_vehiculo">Vehículo</string>
    <string name="pro_repuesto">Repuesto</string>
    <string name="navigation_drawer_open">Abierto</string>
    <string name="navigation_drawer_close">Cerrado</string>
    <string name="ver_mensaje">Enviar mensaje</string>
</resources>