<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_lpr_titulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pro_titulo"
                        android:textColor="?attr/colorPrimarioTexto"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:theme="@style/Theme.Principal" />

                    <ImageView
                        android:id="@+id/iv_lpr_crear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/icono_anadir_foreground"
                        app:tint="?attr/colorSecundarioTexto" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_lpr_vehiculos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/colorBoton"
                        android:checked="true"
                        android:text="@string/pro_vehiculos" />

                    <CheckBox
                        android:id="@+id/cb_lpr_repuestos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="?attr/colorBoton"
                        android:checked="true"
                        android:text="@string/pro_repuestos" />

                    <CheckBox
                        android:id="@+id/cb_lpr_otro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:buttonTint="?attr/colorBoton"
                        android:checked="true"
                        android:text="@string/pro_otro" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_productos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_producto" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>